[DATALAD] Configure containerized environment 'bids-fmriprep'

--- a/.datalad/config
+++ b/.datalad/config
@@ -1,2 +1,5 @@
 [datalad "dataset"]
 	id = 32a6f625-e2f0-4df9-a563-858a90ded00f
+[datalad "containers.bids-fmriprep"]
+	image = code/pipeline/images/bids/bids-fmriprep--20.2.0.sing
+	cmdexec = singularity exec -B {{pwd}} --cleanenv {img} {cmd}
