--- a/code/miss_hit.cfg
+++ b/code/miss_hit.cfg
@@ -1,3 +1,5 @@
+project_root
+
 # styly guide (https://florianschanda.github.io/miss_hit/style_checker.html)
 line_length: 100
 regex_function_name: "[a-z]+(([A-Z]){1}[A-Za-z]+)*"
